@@ -1,7 +1,7 @@
 #!/usr/bin/env python2.7
 from os import path,mkdir
-from shell.core.consoleUI import Console
-from shell.core.utils.color import banner
+from shell.core.main import Console
+from shell.core.utility.color import banner
 version = '1.3.2'
 author  = 'Marcos Nesster (@mh4x0f)'
 def main():
